@@ -1,3 +1,9 @@
+[0, 15, 68]: 2018-09-20
+  - fix issue with parsabel, but incorrect output with nested flow-style sequences
+    (reported by `Dougal Seeley <https://bitbucket.org/dseeley/>`__)
+  - fix issue with loading Python objects that have __setstate__ and recursion in parameters
+    (reported by `Douglas RAILLARD <https://bitbucket.org/DouglasRaillard/>`__)
+
 [0, 15, 67]: 2018-09-19
   - fix issue with extra space inserted with non-root literal strings 
     (Issue reported and PR with fix provided by 
